# fastgraph

./: .gitignore  404.html  Dockerfile  Pipfile  Procfile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docker-image.yml
docs/: index.md
prisma/: dev.db  dev.db-journal  schema.prisma
prisma/migrations/20220305214226_/: migration.sql
res/: class.drawio
search/: search_index.json
src/: main.py
src/api/: mutation.py  query.py
src/data/: __init__.py  books.py  connector.py  repository.py  services.py
src/models/: __init__.py  audio.py  book.py  document.py  file.py  image.py  music.py  presentation.py  project.py  query.py  thumbnail.py  user.py  video.py
