[tool.poetry]
name = "fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["ignema <ignema5@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.4"
fastapi = "^0.73.0"
strawberry-graphql = "^0.96.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
